--- a/index.html,tweets.html
+++ b/index.html,tweets.html
@@ -28,7 +28,7 @@
 </main>
 
 <footer>
-  <p> Made by Your Name - <a href="https://github.com/yourusername" target="-blank">here</a></p>
+  <p> Made by seble molla- <a href="https://github.com/sebli-ux" target="_blank">here</a></p>
 </footer>
 </body>
 </html>
