--- a/index.html
+++ b/index.html
@@ -6,23 +6,37 @@
   <title>my first webpage</title>
 </head>
 <body>
-  <h1>Welcome to my webpage!</h1>
-  <p>This is a the first paragraph. i
-    i am lerning html.
-    <h2> about me</h2>
-    <p> this is the second paragraph.
-      i'm a web developer and i enjoy creating websit.
-    </p>
-    <h3> my skills</h3>
-    <p> this is the thrid paragraph.
-      my skills include html,css,and  javascript.
-    </p>
-    <P> thisph. is the fourth paragra.
-      i am always learning new things!
-    </P>
-<a href="https://www.google .com" target="blank">
-  <img src="http://i.ibb.co/gTDZZT8/ALX-logo-07.png" alt="ALX Logo">
-</a>
-  </p>
+  <article>
+    <h1> Welcome to My Homepage!</h1>
+    <p> This is some content on my homepage.</p>
+    <a href="tweets.html"> view my Tweets</a>
+    <h2> Learner Information</h2>
+    <table>
+      <thead>
+        <tr>
+          <th> Name </th>
+          <th> Age</th>
+          <th> Country</th>
+        </tr>
+      </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td> 25</td>
+        <td> USA</td>
+      </tr>
+      <tr>
+        <td>Emily</td>
+        <td> 28</td>
+        <td> Canada</td>
+      </tr>
+      <tr>
+        <td>Micheal</td>
+        <td> 32</td>
+        <td> UK</td>
+      </tr>
+    </tbody>
+    </table>
+  </article>
 </body>
 </html>
