--- a/index.html
+++ b/index.html
@@ -3,40 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>my first webpage</title>
+  <title> seble molla - personal portfolio</title>
 </head>
 <body>
-  <article>
-    <h1> Welcome to My Homepage!</h1>
-    <p> This is some content on my homepage.</p>
-    <a href="tweets.html"> view my Tweets</a>
-    <h2> Learner Information</h2>
-    <table>
-      <thead>
-        <tr>
-          <th> Name </th>
-          <th> Age</th>
-          <th> Country</th>
-        </tr>
-      </thead>
-    <tbody>
-      <tr>
-        <td>John</td>
-        <td> 25</td>
-        <td> USA</td>
-      </tr>
-      <tr>
-        <td>Emily</td>
-        <td> 28</td>
-        <td> Canada</td>
-      </tr>
-      <tr>
-        <td>Micheal</td>
-        <td> 32</td>
-        <td> UK</td>
-      </tr>
-    </tbody>
-    </table>
+  <header>
+    <h1>seble molla</h1>
+  <p>web developer designer problem solver</p>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introducion </a></li>
+        <li><a href="#projects"> Projects</a></li>
+        <li><a href="#about"> About Me</a></li>
+        <li><a href="#contact" Contact</a></li>
+    </ul>
+  </nav>
+  <section id="introduction ">
+    <h2> Introduction </h2>
+    <p> hi, i'm seble molla,a passionate web developer ...</p>
+  </section>
+
+  <section id="projects">
+    <h2>projects</h2>
+
+  <article class="project">
+    <h3> Project Title 1</h3>
+    <p> A brief description of project 1.</p>
+    <a href="http://example.com /project 1"=_blank"> View project</a>
   </article>
-</body>
-</html>
+
+  <article class="project">
+    <h3>project Title 2</h3>
+    <p> A brief description of project 2.</p>
+    <a href="https://example.com/project2" target="-blank">View project</a>"
+  </article>
+  </section>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p> i'm a web developer with exprience in ..</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <a href="mailto: seblemollateshome@gmail.com">Email Me</a>
+    <a href="https://linkedin.com/in/seblemolla"target="_blank">LinkedIn</a>
+    <a href="https://github.com/sebli-ux" target="_blank">Github</a>"
+  </section>
+ <footer>
+  <p>&coopy;2024 seble molla. All rights reserved.</p>
+  </footer>
+  </body>
+  </html>
